--- a/src/css/scss/modules/_components.scss
+++ b/src/css/scss/modules/_components.scss
@@ -119,6 +119,9 @@ html, body {
         }
         .sunnyGraph__nav--block__trigger {
             background-color: #3D2007;
+            &::before {
+                background-color: #6A0C03;
+            }
         }
     }
     &:nth-of-type(2) {
@@ -130,6 +133,9 @@ html, body {
         }
         .sunnyGraph__nav--block__trigger {
             background-color: #803C3C;
+            &::before {
+                background-color: #B7455E;
+            }
         }
     }
     &:nth-of-type(3) {
@@ -141,6 +147,9 @@ html, body {
         }
         .sunnyGraph__nav--block__trigger {
             background-color: #3A4A2E;
+            &::before {
+                background-color: #6C8B55;
+            }
         }
     }
     &:nth-of-type(4) {
@@ -152,6 +161,9 @@ html, body {
         }
         .sunnyGraph__nav--block__trigger {
             background-color: #313F63;
+            &::before {
+                background-color: #112D74;
+            }
         }
     }
 }
@@ -166,6 +178,7 @@ html, body {
 }
 
 .sunnyGraph__nav--block__trigger {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -179,7 +192,26 @@ html, body {
     letter-spacing: 1.5px;
     text-align: center;
     text-transform: uppercase;
-    
+    transform: translateZ(0);
+    &:hover {
+		&::before {
+            opacity: 1;
+			transform: scaleX(1);
+		}
+	}
+    &::before {
+		content: '';
+		display: block;
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		opacity: 0;
+		transform: scaleX(0);
+		@include transition;
+	}
     img {
         margin-left: 10px;
     }
