--- a/src/css/main.css
+++ b/src/css/main.css
@@ -355,8 +355,10 @@ html, body {
       flex-wrap: wrap;
   background: #D5E0FB;
   width: 90vw;
+  max-height: 90vh;
   max-width: 1160px;
-  font-size: 14px; }
+  font-size: 14px;
+  overflow-y: auto; }
   .sunnyGraph__popover p {
     margin-bottom: 20px; }
   .sunnyGraph__popover .sunnyGraph__popover--image {
@@ -507,26 +509,30 @@ html, body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 20px;
-    height: 20px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    width: 20px;
+    height: 20px;
+    padding: 0;
     -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
             transform: translateY(-50%);
-    background: 0;
-    border: 0;
-    content: url('data:image/svg+xml; utf8, <svg width="10" height="20" viewBox="0 0 10 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.05128 11.8358C0.409013 11.0576 0.681757 9.96382 1.31083 9.37065C3.62928 7.16183 5.62328 4.47609 7.20561 1.43092C8.08543 -0.256069 10.285 1.31664 9.40516 3.01451C7.87679 5.92978 6.01074 8.5517 3.8667 10.7964C5.50162 12.6856 7.22778 14.4502 9.03563 16.0805C10.3554 17.256 9.07962 19.9824 7.7555 18.8015C5.39092 16.6778 3.1506 14.3502 1.05128 11.8358Z" fill="white"/></svg>'); }
+    background: url('data:image/svg+xml; utf8, <svg width="10" height="20" viewBox="0 0 10 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.05128 11.8358C0.409013 11.0576 0.681757 9.96382 1.31083 9.37065C3.62928 7.16183 5.62328 4.47609 7.20561 1.43092C8.08543 -0.256069 10.285 1.31664 9.40516 3.01451C7.87679 5.92978 6.01074 8.5517 3.8667 10.7964C5.50162 12.6856 7.22778 14.4502 9.03563 16.0805C10.3554 17.256 9.07962 19.9824 7.7555 18.8015C5.39092 16.6778 3.1506 14.3502 1.05128 11.8358Z" fill="white"/></svg>');
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 0; }
     @media (min-width: 1024px) {
       .sunnyGraph__popover-4 .sunnyGraph__popover--slider .basicSlider__arrow {
         display: none; } }
     .sunnyGraph__popover-4 .sunnyGraph__popover--slider .basicSlider__arrow.basicSlider__arrow--right {
       right: 0;
-      content: url('data:image/svg+xml; utf8, <svg width="10" height="21" viewBox="0 0 10 21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.16674 12.8358C9.809 12.0576 9.53626 10.9638 8.90719 10.3706C6.58874 8.16183 4.59473 5.47609 3.01241 2.43092C2.13259 0.743931 -0.0669577 2.31664 0.812861 4.01451C2.34123 6.92978 4.20728 9.5517 6.35132 11.7964C4.71639 13.6856 2.99024 15.4502 1.18238 17.0805C-0.137343 18.256 1.13839 20.9824 2.46252 19.8015C4.8271 17.6778 7.06742 15.3502 9.16674 12.8358Z" fill="white"/></svg>'); }
+      background: url('data:image/svg+xml; utf8, <svg width="10" height="21" viewBox="0 0 10 21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.16674 12.8358C9.809 12.0576 9.53626 10.9638 8.90719 10.3706C6.58874 8.16183 4.59473 5.47609 3.01241 2.43092C2.13259 0.743931 -0.0669577 2.31664 0.812861 4.01451C2.34123 6.92978 4.20728 9.5517 6.35132 11.7964C4.71639 13.6856 2.99024 15.4502 1.18238 17.0805C-0.137343 18.256 1.13839 20.9824 2.46252 19.8015C4.8271 17.6778 7.06742 15.3502 9.16674 12.8358Z" fill="white"/></svg>');
+      background-repeat: no-repeat;
+      background-position: center; }
   .sunnyGraph__popover-4 .sunnyGraph__popover--text {
     width: 100%; }
 
